// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File component renders for dataset snapshots 1`] = `
<DocumentFragment>
  <span
    aria-label=""
    class=" on-icon  "
    role="img"
    style="color: deepskyblue;"
  >
    <i
      class="fab fa-markdown"
    />
  </span>
    README
  <span
    class="filetree-editfile"
  >
    <div
      class="fresnel-container fresnel-greaterThanOrEqual-medium "
    >
      <span
        class=" "
        data-flow="up"
        data-tooltip="Download"
      >
        <span
          class="edit-file download-file"
        >
          <a
            aria-label="download file"
            download=""
            href="/crn/datasets/ds001/snapshots/1.0.0/files/README"
          >
            <i
              class="fa fa-download"
            />
          </a>
        </span>
      </span>
    </div>
    <span
      class=" "
      data-flow="up"
      data-tooltip="View"
    >
      <span
        class="edit-file view-file"
      >
        <a
          aria-label="view file"
          href="/datasets/ds001/versions/1.0.0/file-display/README"
        >
          <i
            class="fa fa-eye"
          />
        </a>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`File component renders with common props 1`] = `
<DocumentFragment>
  <span
    aria-label=""
    class=" on-icon  "
    role="img"
    style="color: deepskyblue;"
  >
    <i
      class="fab fa-markdown"
    />
  </span>
    README
  <span
    class="filetree-editfile"
  >
    <div
      class="fresnel-container fresnel-greaterThanOrEqual-medium "
    >
      <span
        class=" "
        data-flow="up"
        data-tooltip="Download"
      >
        <span
          class="edit-file download-file"
        >
          <a
            aria-label="download file"
            download=""
            href="/crn/datasets/ds001/files/README"
          >
            <i
              class="fa fa-download"
            />
          </a>
        </span>
      </span>
    </div>
    <span
      class=" "
      data-flow="up"
      data-tooltip="View"
    >
      <span
        class="edit-file view-file"
      >
        <a
          aria-label="view file"
          href="/datasets/ds001/file-display/README"
        >
          <i
            class="fa fa-eye"
          />
        </a>
      </span>
    </span>
  </span>
</DocumentFragment>
`;
